# dataclass_validate

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
src/: main.py
src/validate/: _types.py  dataclass.py  utils.py
tests/: conftest.py  test_dataclass.py  test_utils.py
validate/: dataclass.py
