[tool.poetry]
name = "dataclass-validate"
packages = [{include = "src"}]
version = "0.1.0"
description = ""
authors = ["MattG-bci"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
