[tool.poetry]
name = "dataclass-validate"
packages = [{include = "validate"}]
version = "0.1.0"
description = ""
authors = ["MattG-bci"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pytest = "^8.3.5"


[tool.ruff]
lint.ignore = [
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # Name may be undefined, or defined from star imports: module
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
